
move it there.........

-------------------------------------------------------------------------------

Sun Oct 10 16:05:48 PDT 1999
(Raster)

move coord box to the right place...

-------------------------------------------------------------------------------

Sun Oct 10 20:02:50 PDT 1999
(Mandrake)

a minor change in ShinyMetal.  typo

-------------------------------------------------------------------------------

Sun Oct 10 20:28:44 PDT 1999
(Mandrake)

changed the default direction to DOWN

-------------------------------------------------------------------------------

Mon Oct 11 09:31:19 PDT 1999
(Raster)

patch from dave mason to fix minor spelling mistakes :)

-------------------------------------------------------------------------------

Mon Oct 11 09:46:02 PDT 1999
(Raster)

add logout soudn when u have have libSM :)

-------------------------------------------------------------------------------

Mon Oct 11 11:27:12 PDT 1999
(KainX)

Undid the naughty part of an earlier patch.  Also eliminated an
unnecessary variable while I was at it.

-------------------------------------------------------------------------------

Wed Oct 13 12:24:18 PDT 1999
(Raster)

um... ipc bug.. DONT reply for the rememebr ipc... oh and spawn snapped 
commands later :)

-------------------------------------------------------------------------------

Wed Oct 13 18:51:30 EST 1999
(Christian)

Added an IPC call for obtaining the current theme.

-------------------------------------------------------------------------------

Thu Oct 14 16:54:52 PDT 1999
(KainX)

Bye-bye icky warnings.

-------------------------------------------------------------------------------

Mon Oct 18 15:31:12 PDT 1999
(Mandrake)

putting in a changelog entry for having updated the rev # in CVS to say 0.16.1

-------------------------------------------------------------------------------

Mon Oct 18 15:34:23 PDT 1999
(Mandrake)

fixed default control.cfg dock direction.  fixed in setup.c also earlier